# cmake-examples

02-sub-projects/A-basic/: CMakeLists.txt
VishalWindows/: CMakeLists.txt
VishalWindows/include/: SomeLibrary.hpp
VishalWindows/lib/: CMakeLists.txt
VishalWindows/lib/SomeLibrary/: CMakeLists.txt
VishalWindows/lib/SomeLibrary/src/: SomeLibrary.cpp
VishalWindows/src/: CMakeLists.txt  SomeLibrary.cpp  main.cpp
VishalWindows/test/: CMakeLists.txt  test_main.cpp
Windows/: CMakeLists.txt
